--- a/find-my-recipe/src/pages/Register.css
+++ b/find-my-recipe/src/pages/Register.css
@@ -7,6 +7,7 @@ body{
     background-size: cover;
 	display: flex;
 	justify-content: center;
+	overflow-y: hidden;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Roboto', sans-serif;
